--- a/index.html
+++ b/index.html
@@ -85,70 +85,74 @@
         <div class="row align-items-center justify-content-center site-hero-inner">
           <div class="col-md-10">
   
-            <div class="mb-5 element-animate">
-              <div class="block-17">
-                <h2 class="heading text-center mb-4">Find Oneline Courses That Suits You</h2>
-                <form action="" method="post" class="d-block d-lg-flex mb-4">
-                  <div class="fields d-block d-lg-flex">
-                    <div class="textfield-search one-third"><input type="text" class="form-control" placeholder="Keyword search..."></div>
-                    <div class="select-wrap one-third">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="" id="" class="form-control">
-                        <option value="">Category Course</option>
-                        <option value="">Laravel</option>
-                        <option value="">PHP</option>
-                        <option value="">JavaScript</option>
-                        <option value="">Python</option>
-                      </select>
-                    </div>
-                    <div class="select-wrap one-third">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="" id="" class="form-control">
-                        <option value="">Difficulty</option>
-                        <option value="">Beginner</option>
-                        <option value="">Intermediate</option>
-                        <option value="">Advance</option>
-                      </select>
-                    </div>
+            <div class="row">
+              <div class="col">
+                <div class="mb-5 element-animate">
+                  <div class="block-17">
+                    <h2 class="heading text-center mb-4">Form B</h2>
+                    <form action="" method="post" class="d-block d-lg-flex align-items-center flex-column mb-4">
+                      <div class="fields d-block d-lg-flex flex-column">
+                        <div class="textfield-search"><input type="text" class="form-control" placeholder="Keyword search..."></div>
+                        <div class="select-wrap">
+                          <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                          <select name="" id="" class="form-control">
+                            <option value="">Category Course</option>
+                            <option value="">Laravel</option>
+                            <option value="">PHP</option>
+                            <option value="">JavaScript</option>
+                            <option value="">Python</option>
+                          </select>
+                        </div>
+                        <div class="select-wrap">
+                          <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                          <select name="" id="" class="form-control">
+                            <option value="">Difficulty</option>
+                            <option value="">Beginner</option>
+                            <option value="">Intermediate</option>
+                            <option value="">Advance</option>
+                          </select>
+                        </div>
+                      </div>
+                      <input type="submit" class="search-submit btn btn-primary" value="Search">  
+                    </form>
+                    <p class="text-center mb-5">We have more than 500 courses to improve your skills</p>
+                    <p class="text-center"><a href="#" class="btn py-3 px-5">Register Now</a></p>
                   </div>
-                  <input type="submit" class="search-submit btn btn-primary" value="Search">  
-                </form>
-                <p class="text-center mb-5">We have more than 500 courses to improve your skills</p>
-                <p class="text-center"><a href="#" class="btn py-3 px-5">Register Now</a></p>
+                </div>
               </div>
-            </div>
-
-
-            <div class="mb-5 element-animate">
-              <div class="block-17">
-                <h2 class="heading text-center mb-4">Find Oneline Courses That Suits You</h2>
-                <form action="" method="post" class="d-block d-lg-flex mb-4">
-                  <div class="fields d-block d-lg-flex">
-                    <div class="textfield-search one-third"><input type="text" class="form-control" placeholder="Keyword search..."></div>
-                    <div class="select-wrap one-third">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="" id="" class="form-control">
-                        <option value="">Category Course</option>
-                        <option value="">Laravel</option>
-                        <option value="">PHP</option>
-                        <option value="">JavaScript</option>
-                        <option value="">Python</option>
-                      </select>
-                    </div>
-                    <div class="select-wrap one-third">
-                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                      <select name="" id="" class="form-control">
-                        <option value="">Difficulty</option>
-                        <option value="">Beginner</option>
-                        <option value="">Intermediate</option>
-                        <option value="">Advance</option>
-                      </select>
-                    </div>
+              <div class="col">
+                <div class="mb-5 element-animate">
+                  <div class="block-17">
+                    <h2 class="heading text-center mb-4">Form B</h2>
+                    <form action="" method="post" class="d-block d-lg-flex align-items-center flex-column mb-4">
+                      <div class="fields d-block d-lg-flex flex-column">
+                        <div class="textfield-search"><input type="text" class="form-control" placeholder="Keyword search..."></div>
+                        <div class="select-wrap">
+                          <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                          <select name="" id="" class="form-control">
+                            <option value="">Category Course</option>
+                            <option value="">Laravel</option>
+                            <option value="">PHP</option>
+                            <option value="">JavaScript</option>
+                            <option value="">Python</option>
+                          </select>
+                        </div>
+                        <div class="select-wrap">
+                          <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                          <select name="" id="" class="form-control">
+                            <option value="">Difficulty</option>
+                            <option value="">Beginner</option>
+                            <option value="">Intermediate</option>
+                            <option value="">Advance</option>
+                          </select>
+                        </div>
+                      </div>
+                      <input type="submit" class="search-submit btn btn-primary" value="Search">  
+                    </form>
+                    <p class="text-center mb-5">We have more than 500 courses to improve your skills</p>
+                    <p class="text-center"><a href="#" class="btn py-3 px-5">Register Now</a></p>
                   </div>
-                  <input type="submit" class="search-submit btn btn-primary" value="Search">  
-                </form>
-                <p class="text-center mb-5">We have more than 500 courses to improve your skills</p>
-                <p class="text-center"><a href="#" class="btn py-3 px-5">Register Now</a></p>
+                </div>
               </div>
             </div>
 
