--- a/about.html
+++ b/about.html
@@ -154,6 +154,8 @@
                 <h3 class="heading">Senior High School</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit mess.</p>
                 <p><a href="#" class="more">Read More <span class="ion-arrow-right-c"></span></a></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit mess.</p>
+                <p><a href="#" class="more">Read More <span class="ion-arrow-right-c"></span></a></p>
               </div>
             </div> 
           </div>
