--- a/contact.html
+++ b/contact.html
@@ -173,6 +173,8 @@
           <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
             <h3>University</h3>
             <p>Perferendis eum illum voluptatibus dolore tempora consequatur minus asperiores temporibus.</p>
+            
+            <p>Perferendis eum illum voluptatibus dolore tempora consequatur minus asperiores temporibus.</p>
           </div>
           <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
             <h3 class="heading">Quick Link</h3>
